# FixDoc

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  ROADMAP.md  Saas.md  deep-research-report.md  fixdoc-site-improvements.md  fixdoc-week-1-coding-deliverables.md  prd.md  pyproject.toml  pytest.ini  railway.toml  requirements.txt
.fixdoc-catalog/: ingress-controller-azlinux2-azlinux3.yaml  linuxOS-azlinux2-azlinux3.yaml
.github/workflows/: terraform-apply-outcome.yml  terraform-risk-analysis.yml
backend/: Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/integrations/: github_app.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  _mixins.py  api_key.py  fix.py  github_installation.py  pending_entry.py  project.py  team.py  user.py
backend/app/routers/: analyze.py  auth.py  fixes.py  github_webhooks.py  health.py  integrations.py  pending.py  teams.py  webhooks.py
backend/app/schemas/: analyze.py  common.py  fix.py  pending.py  team.py  user.py
backend/app/services/: analyze_service.py  api_key_service.py  fix_service.py  team_service.py
backend/tests/: conftest.py  test_analyze_route.py  test_fixes.py  test_github_app.py  test_health.py  test_integrations_route.py  test_teams.py
fixdoc-web/: Dockerfile  README.md  demo.html  index.html
fixdoc-web/css/: design-tokens.css  styles.css
frontend/: .env.local.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
github-action/: README.md  action.yml
scenarios/: .gitignore  RUNBOOK.md  run_all.sh
scenarios/01-greenfield/: fixdoc.json  main.tf  plan.json  variables.tf
test_terraform/: README.md  docker-compose.yml  main.tf
tests/: __init__.py  plan.json  terraform-error.txt  test_analyzer.py  test_blast_radius.py  test_change_impact.py  test_change_impact_format.py  test_classifier.py  test_cloud.py  test_config.py  test_dedup.py  test_demo.py  test_diagnosis.py  test_importers.py  test_integration_terraform.py  test_k8s_catalog_custom.py  test_k8s_cli.py  test_k8s_engine.py  test_k8s_models.py  test_markdown_parser.py  test_memory_type_classifier.py  test_models.py  test_notifications.py  test_outcomes.py  test_pending.py  test_pending_smart.py  test_relevance.py  test_resolve.py  test_search.py  test_suggestions.py  test_team_commands.py  test_terraform_parser.py  test_watch.py
(+196 files in other folders)
